Novo tema com angular

--- a/layout/blur-admin/.tmp/serve/index.html
+++ b/layout/blur-admin/.tmp/serve/index.html
@@ -204,6 +204,7 @@
 <script src="app/pages/dashboard/trafficChart/trafficChart.directive.js"></script>
 <script src="app/pages/dashboard/weather/WeatherCtrl.js"></script>
 <script src="app/pages/dashboard/weather/weather.directive.js"></script>
+<script src="app/pages/devolucao/sala_agendamento/AgendamentoSalasPageCtrl.js"></script>
 <script src="app/pages/form/wizard/wizrdCtrl.js"></script>
 <script src="app/pages/ui/buttons/ButtonPageCtrl.js"></script>
 <script src="app/pages/ui/icons/IconsPageCtrl.js"></script>
