--- a/layout/blur-admin/src/sass/theme/bootstrap-overrides/_panel.scss
+++ b/layout/blur-admin/src/sass/theme/bootstrap-overrides/_panel.scss
@@ -65,14 +65,14 @@ $panel-heading-font-size: 16px;
 .panel-heading, .panel-footer {
   border-bottom: 1px solid rgba(0, 0, 0, 0.12);
   box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.12);
-  height: $panel-title-height;
+  /*height: $panel-title-height;*/
   font-size: $panel-heading-font-size;
   $vertical-padding: ($panel-title-height - $panel-heading-font-size) / 2;
   padding: $vertical-padding 22px;
 }
 
 .panel-title {
-  font-weight: $font-normal;
+  font-weight: 600;
   text-transform: uppercase;
   opacity: 0.9;
 }
@@ -91,6 +91,7 @@ $panel-heading-font-size: 16px;
   > .panel-heading {
     background-color: $primary-bg;
     border-color: $primary-bg;
+    color: #fff;
   }
 }
 
