--- a/layout/blur-admin/src/app/pages/salas/buscar_salas/buscar_salas.html
+++ b/layout/blur-admin/src/app/pages/salas/buscar_salas/buscar_salas.html
@@ -1,7 +1,7 @@
 <div class="widgets">
 	<div class="row">
 		<div class="col-md-12">
-			<div ba-panel ba-panel-title="Salas" ba-panel-class="with-scroll">
+			<div ba-panel ba-panel-title="Salas" ba-panel-class="panel-primary">
 				<div class="horizontal-scroll">
 					<form class="ng-pristine ng-valid ng-scope">
 						<div class="form-group col-sm-3">
