--- a/layout/blur-admin/src/app/pages/salas/cadastrar_sala/cadastrar_sala.html
+++ b/layout/blur-admin/src/app/pages/salas/cadastrar_sala/cadastrar_sala.html
@@ -3,81 +3,48 @@
         <div class="col-md-12">
             <div ba-panel ba-panel-title="Cadastro" ba-panel-class="panel-primary">
                 <div>
-                    <div class="form-horizontal ng-pristine ng-valid ng-scope">
-                        <div class="form-group">
-                            <div class="form-group">
-                                <div class="col-md-4">
-                                    <label class="col-sm-4 control-label">
-                                        <i class="ion-pound" aria-hidden="true"></i> Número da sala </label>
-                                    <div class="col-sm-8">
-                                        <input type="text" class="form-control" id="numero_sala" placeholder="Número"
-                                               required>
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
-                                    <label class="col-sm-4 control-label">
-                                        <i class="fa fa-users" aria-hidden="true"></i> Capacidade </label>
-                                    <div class="col-sm-8">
-                                        <input type="text" class="form-control" id="capacidade" placeholder="Capacidade"
-                                               required>
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
-                                    <label class="col-sm-4 control-label">
-                                        <i class="fa fa-map-marker" aria-hidden="true"></i> Pavilhão </label>
-                                    <div class="col-sm-8">
-                                        <input type="text" class="form-control" placeholder="Pavilhão" required>
-                                    </div>
-                                </div>
-
+                    <div class="horizontal-scroll">
+                        <form class="ng-pristine ng-valid ng-scope">
+                            <div class="form-group col-sm-4">
+                                <label>Número da sala</label>
+                                <input class="form-control" id="numero_sala" placeholder="Número" type="text" ng-required="true">
                             </div>
+                            <div class="form-group col-sm-4">
+                                <label>Capacidade</label>
+                                <input class="form-control" id="capacidade" placeholder="Capacidade" type="text" ng-required="true">
+                            </div>
+                            <div class="form-group col-sm-4">
+                                <label>Pavilhão</label>
+                                <input class="form-control" id="pavilhao" placeholder="Pavilhão" type="text" ng-required="true">
+                            </div>
+
                             <!-- Select radio -->
-                            <div class="form-group">
-                                <div class="col-md-4">
-                                    <label class="col-sm-4 control-label">
-                                        <i class="ion-help" aria-hidden="true"></i> Tipo da sala</label>
-                                    <div class="col-md-8">
-                                        <div class="radio">
-                                            <label>
-                                                <input type="radio" name="optionsRadios" id="optionsRadios1"
-                                                       value="option1"
-                                                       checked>
-                                                Sala de aula
-                                            </label>
-                                        </div>
-                                        <div class="radio">
-                                            <label>
-                                                <input type="radio" name="optionsRadios" id="optionsRadios2"
-                                                       value="option2">
-                                                Laboratório
-                                            </label>
-                                        </div>
-                                        <div class="radio">
-                                            <label>
-                                                <input type="radio" name="optionsRadios" id="optionsRadios3"
-                                                       value="option3">
-                                                Auditório
-                                            </label>
-                                        </div>
-                                        <div class="radio">
-                                            <label>
-                                                <input type="radio" name="optionsRadios" id="optionsRadios3"
-                                                       value="option4">
-                                                Sala de reunião
-                                                <p></p>
-                                            </label>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-8">
-                                    <label class="col-sm-2 control-label">
-                                        <i class="ion-images" aria-hidden="true"></i> Imagem da sala</label>
-                                    <input class="col-md-8" type="file" id="exampleInputFile">
+                            <div class="form-group col-sm-4">
+                                <label>Tipo da sala</label>
+                                <div class="controls radio-controls">
+                                    <label class="radio custom-radio">
+                                        <input type="radio" ng-model="options.positionClass" name="positions" value="toast-top-right" />
+                                        <span>Sala de aula</span>
+                                    </label>
+                                    <label class="radio custom-radio">
+                                        <input type="radio" ng-model="options.positionClass" name="positions" value="toast-bottom-right" />
+                                        <span>Laboratório</span>
+                                    </label>
+                                    <label class="radio custom-radio">
+                                        <input type="radio" ng-model="options.positionClass" name="positions" value="toast-bottom-left" />
+                                        <span>Auditório</span>
+                                    </label>
+                                    <label class="radio custom-radio">
+                                        <input type="radio" ng-model="options.positionClass" name="positions" value="toast-top-left" />
+                                        <span>Sala de reunião</span>
+                                    </label>
                                 </div>
                             </div>
-                        </div>
+                            <div class="form-group col-sm-4">
+                                <label>Imagem da sala</label>
+                                <input type="file" id="exampleInputFile">
+                            </div>
                         </form>
-
                     </div>
                 </div>
             </div>
