Adequando a tela do dashboard a novo layout

--- a/layout/blur-admin/src/app/pages/dashboard/dashboardLineChart/dashboardLineChart.html
+++ b/layout/blur-admin/src/app/pages/dashboard/dashboardLineChart/dashboardLineChart.html
@@ -1,5 +1,8 @@
 <div class="row">
-  <div class="col-md-12">
-	  <div include-with-scope="app/pages/tables/widgets/condensedTable.html"></div>
-  </div>
+    <div class="col-md-12">
+        <div include-with-scope="app/pages/dashboard/dashboardLineChart/table.html"></div>
+        <div class="pull-right">
+            <a href="">Ver todas as solicitações...</a>
+        </div>
+    </div>
 </div>
