--- a/layout/blur-admin/src/app/pages/dashboard/dashboardPieChart/dashboardPieChart.html
+++ b/layout/blur-admin/src/app/pages/dashboard/dashboardPieChart/dashboardPieChart.html
@@ -1,13 +1,13 @@
 <div class="row pie-charts">
-  <div class="pie-chart-item-container" ng-repeat="chart in charts">
-    <div ba-panel>
-      <div class="pie-chart-item">
-        <div class="description">
-          <div>{{ ::chart.description }}</div>
-          <div class="description-stats"><b>{{ ::chart.stats }}</b></div>
+    <div class="pie-chart-item-container" ng-repeat="chart in charts">
+        <div ba-panel >
+            <div class="small-box {{ ::chart.color}}">
+                <div class="inner">
+                    <h3>{{ ::chart.stats}}</h3>
+                    <p>{{ ::chart.description}}</p>
+                </div>
+                <div class="icon pull-right"><i class="fa fa-{{ ::chart.icon}}"></i></div>
+            </div>
         </div>
-        <!--<i class="fa fa-{{ ::chart.icon }}"></i>-->
-      </div>
     </div>
-  </div>
 </div>
