--- a/layout/blur-admin/src/index.html
+++ b/layout/blur-admin/src/index.html
@@ -55,6 +55,7 @@
 <!-- endbower -->
 <!-- endbuild -->
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<script type="text/javascript" src="assets/js/mascara.js"></script>
 
 <!-- build:js({.tmp/serve,.tmp/partials,src}) scripts/app.js -->
 <!-- inject:js -->
