--- a/layout/blur-admin/.tmp/serve/index.html
+++ b/layout/blur-admin/.tmp/serve/index.html
@@ -140,8 +140,8 @@
 <script src="app/pages/tables/tables.module.js"></script>
 <script src="app/pages/ui/ui.module.js"></script>
 <script src="app/theme/components/components.module.js"></script>
-<script src="app/pages/charts/chartJs/chartJs.module.js"></script>
 <script src="app/pages/charts/amCharts/amCharts.module.js"></script>
+<script src="app/pages/charts/chartJs/chartJs.module.js"></script>
 <script src="app/pages/charts/chartist/chartist.module.js"></script>
 <script src="app/pages/charts/morris/morris.module.js"></script>
 <script src="app/pages/ui/alerts/alerts.module.js"></script>
@@ -185,6 +185,8 @@
 <script src="app/pages/charts/chartJs/chartJsWaveCtrl.js"></script>
 <script src="app/pages/charts/chartist/chartistCtrl.js"></script>
 <script src="app/pages/charts/morris/morrisCtrl.js"></script>
+<script src="app/pages/dashboard/accordionDashboard/AccordionDashboardCtrl.js"></script>
+<script src="app/pages/dashboard/accordionDashboard/accordionDashboard.directive.js"></script>
 <script src="app/pages/dashboard/blurFeed/BlurFeedCtrl.js"></script>
 <script src="app/pages/dashboard/blurFeed/blurFeed.directive.js"></script>
 <script src="app/pages/dashboard/calendar/dashboardCalendar.js"></script>
