--- a/mobile/ChavesIME/app/src/main/res/layout/layout_menu.xml
+++ b/mobile/ChavesIME/app/src/main/res/layout/layout_menu.xml
@@ -3,7 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/menuRelativeLayout"
     android:layout_gravity="start">
 
@@ -11,45 +10,27 @@
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:id="@+id/menuTopView"
-        android:background="@color/light_gray"/>
+        android:background="@color/colorPrimary"/>
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="@color/colorPrimary"
-        android:layout_alignBottom="@id/menuTopView"/>
+        android:layout_height="100dp"
+        android:id="@+id/menuMidView"
+        android:background="@color/white"
+        android:layout_below="@id/menuTopView"/>
 
     <ImageView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:id="@+id/menu_logo"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:src="@drawable/logo_ufba"
-        android:layout_marginTop="35dp"
-        tools:ignore="ContentDescription"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toEndOf="@id/menu_logo"
-        android:text="@string/app_name"
-        android:textSize="25sp"
-        android:textColor="@color/colorPrimary"
-        android:layout_marginTop="50dp"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toEndOf="@id/menu_logo"
-        android:text="Usuário: 123456789"
-        android:textSize="20sp"
-        android:textColor="@color/colorPrimary"
-        android:layout_marginTop="80dp"/>
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="100dp"/>
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/menuRecyclerView"
-        android:layout_below="@id/menuTopView"
+        android:layout_below="@id/menuMidView"
         android:layout_alignParentBottom="true"
         android:background="@color/white"/>
 
