--- a/mobile/ChavesIME/app/src/main/res/values/arrays.xml
+++ b/mobile/ChavesIME/app/src/main/res/values/arrays.xml
@@ -1,20 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="menuItemsArray">
-        <item>Home</item>
-        <item>Reservar</item>
+        <item>Salas</item>
+        <item>Datas</item>
         <item>Cronograma</item>
-        <item>Passar Chave</item>
-        <item>Exemplo de Requisição</item>
         <item>Sair</item>
     </string-array>
     <string-array name="menuDrawablesArray">
-        <item>home_icon</item>
-        <item>calendar_icon</item>
-        <item>calendar_icon</item>
-        <item>keys_icon</item>
-        <item>keys_icon</item>
-        <item>exit_icon</item>
+        <item>logo_ufba</item>
+        <item>logo_ufba</item>
+        <item>logo_ufba</item>
+        <item>logo_ufba</item>
     </string-array>
 
 </resources>
