--- a/mobile/ChavesIME/app/src/main/res/layout/activity_home.xml
+++ b/mobile/ChavesIME/app/src/main/res/layout/activity_home.xml
@@ -1,54 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/menuDrawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
-    <android.support.design.widget.CoordinatorLayout
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true">
+        tools:context=".controller.HomeActivity"
+        android:background="@color/light_gray">
 
-        <android.support.design.widget.AppBarLayout
+        <android.support.v7.widget.Toolbar
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/home_AppBarLayout"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            android:fitsSystemWindows="true">
-
-            <android.support.design.widget.CollapsingToolbarLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/home_collapsingToolbar"
-                app:title="@string/app_name"
-                app:titleEnabled="true"
-                app:contentScrim="?attr/colorPrimary"
-                android:fitsSystemWindows="true"
-                app:layout_scrollFlags="scroll|exitUntilCollapsed"
-                app:expandedTitleTextAppearance="@style/ToolbarTextSize">
-
-                <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="250dp"
-                android:src="@drawable/foto_ime"
-                android:scaleType="centerCrop"
-                app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
-                app:layout_collapseMode="parallax"
-                tools:ignore="ContentDescription"/>
-
-                <android.support.v7.widget.Toolbar
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:id="@+id/homeToolbar"
-                    app:layout_collapseMode="pin">
-                </android.support.v7.widget.Toolbar>
-
-            </android.support.design.widget.CollapsingToolbarLayout>
-
-        </android.support.design.widget.AppBarLayout>
+            android:background="@color/colorPrimary"
+            app:titleTextColor="@color/white"
+            android:id="@+id/homeToolbar">
+        </android.support.v7.widget.Toolbar>
 
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
@@ -56,12 +29,11 @@
             android:id="@+id/homeRecyclerView"
             android:layout_below="@id/homeToolbar"
             android:layout_alignParentBottom="true"
-            android:background="@color/light_gray"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            android:background="@color/light_gray">
 
         </android.support.v7.widget.RecyclerView>
 
-    </android.support.design.widget.CoordinatorLayout>
+    </RelativeLayout>
 
     <include
         layout="@layout/layout_menu">
