--- a/mobile/ChavesIME/app/src/main/res/layout/activity_login.xml
+++ b/mobile/ChavesIME/app/src/main/res/layout/activity_login.xml
@@ -1,91 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".controller.LoginActivity"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent"
+    tools:context=".controller.LoginActivity"
+    android:background="@color/white">
 
-    <android.support.v7.widget.Toolbar
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:id="@+id/login_toolbar"
-        android:background="@color/colorPrimary"
-        app:titleTextColor="@color/white"
-        app:title="@string/app_name"/>
+        android:layout_height="wrap_content">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/login_toolbar"
-        android:background="@color/white">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/login_logoIMEImageView"
+            android:src="@drawable/logo_ufba"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="40dp"
+            tools:ignore="ContentDescription"/>
 
-        <RelativeLayout
+
+        <EditText
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:id="@+id/login_matriculaEditText"
+            android:hint="@string/matricula"
+            android:layout_below="@id/login_logoIMEImageView"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:inputType="number"/>
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/login_logoIMEImageView"
-                android:src="@drawable/logo_ufba"
-                android:layout_centerHorizontal="true"
-                android:layout_margin="20dp"
-                tools:ignore="ContentDescription"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/login_senhaEditText"
+            android:hint="@string/senha"
+            android:inputType="numberPassword"
+            android:layout_below="@id/login_matriculaEditText"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"/>
 
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/login_matriculaEditText"
-                android:hint="@string/matricula"
-                android:layout_below="@id/login_logoIMEImageView"
-                android:layout_marginTop="20dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
-                android:inputType="number"/>
+        <Button
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/login_loginButton"
+            android:text="@string/login"
+            android:textColor="@color/white"
+            android:background="@drawable/botao_redondo"
+            android:layout_below="@id/login_senhaEditText"
+            android:layout_marginTop="30dp"
+            android:layout_centerHorizontal="true"
+            android:onClick="botaoLogin"/>
 
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/login_senhaEditText"
-                android:hint="@string/senha"
-                android:inputType="textPassword"
-                android:layout_below="@id/login_matriculaEditText"
-                android:layout_marginTop="20dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/login_registerButton"
+            android:layout_below="@id/login_loginButton"
+            android:layout_centerHorizontal="true"
+            android:background="@android:color/transparent"
+            android:layout_marginTop="10dp"
+            android:text="@string/naoTenhoCadastro"
+            android:textColor="@android:color/darker_gray"
+            android:onClick="botaoCadastro"/>
 
-            <Button
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/login_loginButton"
-                android:text="@string/login"
-                android:textColor="@color/white"
-                android:background="@drawable/botao_redondo"
-                android:layout_below="@id/login_senhaEditText"
-                android:layout_marginTop="30dp"
-                android:layout_centerHorizontal="true"
-                android:onClick="botaoLogin"/>
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/login_registerButton"
-                android:layout_below="@id/login_loginButton"
-                android:layout_centerHorizontal="true"
-                android:background="@android:color/transparent"
-                android:layout_marginTop="10dp"
-                android:text="@string/naoTenhoCadastro"
-                android:textColor="@android:color/darker_gray"
-                android:onClick="botaoCadastro"/>
-
-        </RelativeLayout>
-
-    </ScrollView>
-
-</RelativeLayout>
+    </RelativeLayout>
 
 
 
-
+</ScrollView>
